; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_bind_filter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_bind_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.cbq_sched_data = type { i32 }
%struct.cbq_class = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.Qdisc*, i64, i32)* @cbq_bind_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cbq_bind_filter(%struct.Qdisc* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.Qdisc*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.cbq_sched_data*, align 8
  %9 = alloca %struct.cbq_class*, align 8
  %10 = alloca %struct.cbq_class*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load %struct.Qdisc*, %struct.Qdisc** %5, align 8
  %12 = call %struct.cbq_sched_data* @qdisc_priv(%struct.Qdisc* %11)
  store %struct.cbq_sched_data* %12, %struct.cbq_sched_data** %8, align 8
  %13 = load i64, i64* %6, align 8
  %14 = inttoptr i64 %13 to %struct.cbq_class*
  store %struct.cbq_class* %14, %struct.cbq_class** %9, align 8
  %15 = load %struct.cbq_sched_data*, %struct.cbq_sched_data** %8, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call %struct.cbq_class* @cbq_class_lookup(%struct.cbq_sched_data* %15, i32 %16)
  store %struct.cbq_class* %17, %struct.cbq_class** %10, align 8
  %18 = load %struct.cbq_class*, %struct.cbq_class** %10, align 8
  %19 = icmp ne %struct.cbq_class* %18, null
  br i1 %19, label %20, label %39

20:                                               ; preds = %3
  %21 = load %struct.cbq_class*, %struct.cbq_class** %9, align 8
  %22 = icmp ne %struct.cbq_class* %21, null
  br i1 %22, label %23, label %32

23:                                               ; preds = %20
  %24 = load %struct.cbq_class*, %struct.cbq_class** %9, align 8
  %25 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.cbq_class*, %struct.cbq_class** %10, align 8
  %28 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp sle i64 %26, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %23
  store i64 0, i64* %4, align 8
  br label %40

32:                                               ; preds = %23, %20
  %33 = load %struct.cbq_class*, %struct.cbq_class** %10, align 8
  %34 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %34, align 8
  %37 = load %struct.cbq_class*, %struct.cbq_class** %10, align 8
  %38 = ptrtoint %struct.cbq_class* %37 to i64
  store i64 %38, i64* %4, align 8
  br label %40

39:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %40

40:                                               ; preds = %39, %32, %31
  %41 = load i64, i64* %4, align 8
  ret i64 %41
}

declare dso_local %struct.cbq_sched_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local %struct.cbq_class* @cbq_class_lookup(%struct.cbq_sched_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
